--- a/app/Resources/views/includes/nav_admin.html.twig
+++ b/app/Resources/views/includes/nav_admin.html.twig
@@ -92,7 +92,7 @@
 				</a>
 			</li>
 			<li class="
-				{% if route == 'lbf_admin_elements' or route == 'lbf_admin_new_element' or route == 'lbf_admin_edit_element' %} 
+				{% if route == 'lbf_admin_elements' or route == 'lbf_admin_elements_sorted' or route == 'lbf_admin_new_element' or route == 'lbf_admin_edit_element' %} 
 					active 
 				{% endif %}
 				">
@@ -104,7 +104,7 @@
 				</a>
 			</li>
 			<li class="
-				{% if route == 'lbf_admin_recipes' or route == 'lbf_admin_new_recipe' or route == 'lbf_admin_edit_recipe' %} 
+				{% if route == 'lbf_admin_recipes' or route == 'lbf_admin_recipes_sorted' or route == 'lbf_admin_new_recipe' or route == 'lbf_admin_edit_recipe' %} 
 					active 
 				{% endif %}
 				">
