--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -100,9 +100,11 @@
             and route != 'lbf_admin_edit_comment'
             and route != 'lbf_admin_delete_comment'
             and route != 'lbf_admin_elements'
+            and route != 'lbf_admin_elements_sorted'
             and route != 'lbf_admin_new_element'
             and route != 'lbf_admin_edit_element'
             and route != 'lbf_admin_recipes'
+            and route != 'lbf_admin_recipes_sorted'
             and route != 'lbf_admin_new_recipe'
             and route != 'lbf_admin_edit_element' 
             and route != 'lbf_admin_newsletterEmailsSpe' %}
