hide xs message nuevo

--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -1138,7 +1138,7 @@
 
 			{% if newsOnThePage == "yes" %}
 				{% set generalIdNew = '' %}
-				<div class="news_on_page">
+				<div class="news_on_page hidden-xs">
 					<img src="{{ asset('img/system/defaults/new_2_ES.png') }}" alt="New" class="news_on_page_img"/>
 				</div>
 			{% endif %}
