--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -1322,15 +1322,22 @@ body.modal-open {
 }
 
 .btn_right_arrow_spe {
-	width: 20px;
+	width: 30px;
 	position: relative;
 	top: -2px;
+	margin-right: 5px;
 }
 @media (max-width: 477px) {
 	.btn_right_arrow_spe {
 		width: 14px !important;
 		top: 0px !important;
 	}
+}
+.btn_right_arrow_spe_2 {
+	width: 24px;
+	position: relative;
+	top: -2px;
+	right: -15px;
 }
 
 #product_content {
